# resumeoptimiser

./: .gitignore  LOG_REFERENCE.sh  README.md  SETUP_OPENROUTER.sh  debug_cv_parsing.py  debug_regex.py  docker-compose.yml  test_parsing_fixes.py
resumeoptimiser/: .env.example  .gitignore  ARCHITECTURE.md  DEVELOPMENT.md  Dockerfile  INDEX.md  LOGGING_AND_LLM.md  MIGRATION.md  Makefile  README.md  REFACTOR_SUMMARY.md  STRUCTURE.md  base_skills.json  client.py  pyproject.toml  requirements.txt  run.py  template.tex
resumeoptimiser/.github/workflows/: copilot-instructions.md
resumeoptimiser/app/: main.py
resumeoptimiser/app/agents/: base.py  cv_parser.py  cv_rewrite_stage1_agent.py  cv_rewrite_stage2_agent.py  cv_rewriter.py  cv_validator.py  ideal_profile_agent.py  job_normalizer.py  llm_match_analyzer.py  markdown_rewriter.py  ocr_to_markdown.py  report_generator.py  rescorer.py  score_explainer.py  semantic_matcher.py
resumeoptimiser/app/api/: deps.py
resumeoptimiser/app/core/: config.py  exceptions.py  logging.py
resumeoptimiser/app/domain/: models.py
resumeoptimiser/app/infrastructure/: cache.py  embedding_client.py  llm_client.py  vector_store.py
resumeoptimiser/app/schemas/: __init__.py  cv.py  job.py  markdown.py  pipeline.py  report.py  scoring.py
resumeoptimiser/app/services/: cv_cache_service.py  cv_to_markdown.py  markdown_diff_service.py  markdown_pdf_renderer.py  optimization_service.py  prompt_cache_service.py
resumeoptimiser/src/: __init__.py  main.py
resumeoptimiser/src/api/: base_skills.py  jd.py  (+7 more)
resumeoptimiser/tests/: conftest.py
(+69 files in other folders)
